--- a/src/styles/common/_settings.scss
+++ b/src/styles/common/_settings.scss
@@ -110,6 +110,7 @@
     .item-label {
       font-weight: 600;
       font-size: 0.95rem;
+      color: var(--text-primary)
     }
     .item-desc {
       font-size: 0.75rem;
